// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Link" renders 1`] = `
a.emotion-0,
.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 11px;
  font-weight: 600;
  opacity: 1;
  text-align: left;
  text-transform: uppercase;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

a.emotion-0:hover,
.emotion-0:hover {
  color: rgb(44,47,50);
}

a.emotion-0:visited,
.emotion-0:visited,
a.emotion-0:link,
.emotion-0:link,
a.emotion-0:active,
.emotion-0:active {
  color: rgb(52,56,59);
}

<a
  className="emotion-0"
>
  Link
</a>
`;

exports[`"Link" renders with component 1`] = `
h1.emotion-0,
.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 11px;
  font-weight: 600;
  opacity: 1;
  text-align: left;
  text-transform: uppercase;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

h1.emotion-0:hover,
.emotion-0:hover {
  color: rgb(44,47,50);
}

h1.emotion-0:visited,
.emotion-0:visited,
h1.emotion-0:link,
.emotion-0:link,
h1.emotion-0:active,
.emotion-0:active {
  color: rgb(52,56,59);
}

<h1
  className="emotion-0"
>
  Link
</h1>
`;
